// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation/Stepper ActiveStep play-test 1`] = `
<div>
  <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mui-classname">
    <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-mui-classname">
      <div class="MuiStepper-root MuiStepper-horizontal MuiStepper-alternativeLabel css-mui-classname"
           data-cy="Stepper"
      >
        <div class="MuiStep-root MuiStep-horizontal MuiStep-alternativeLabel Mui-completed css-mui-classname">
          <span class="MuiStepLabel-root MuiStepLabel-horizontal MuiStepLabel-alternativeLabel css-mui-classname">
            <span class="MuiStepLabel-iconContainer Mui-completed MuiStepLabel-alternativeLabel css-mui-classname">
              <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root Mui-completed css-mui-classname"
                   focusable="false"
                   aria-hidden="true"
                   viewbox="0 0 24 24"
                   data-testid="CheckCircleIcon"
              >
                <path d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z">
                </path>
              </svg>
            </span>
            <span class="MuiStepLabel-labelContainer MuiStepLabel-alternativeLabel css-mui-classname">
              <span class="MuiStepLabel-label Mui-completed MuiStepLabel-alternativeLabel css-mui-classname">
                STEP1
              </span>
            </span>
          </span>
        </div>
        <div class="MuiStep-root MuiStep-horizontal MuiStep-alternativeLabel Mui-completed css-mui-classname">
          <div class="MuiStepConnector-root MuiStepConnector-horizontal MuiStepConnector-alternativeLabel Mui-completed css-mui-classname">
            <span class="MuiStepConnector-line MuiStepConnector-lineHorizontal css-mui-classname">
            </span>
          </div>
          <span class="MuiStepLabel-root MuiStepLabel-horizontal MuiStepLabel-alternativeLabel css-mui-classname">
            <span class="MuiStepLabel-iconContainer Mui-completed MuiStepLabel-alternativeLabel css-mui-classname">
              <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root Mui-completed css-mui-classname"
                   focusable="false"
                   aria-hidden="true"
                   viewbox="0 0 24 24"
                   data-testid="CheckCircleIcon"
              >
                <path d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z">
                </path>
              </svg>
            </span>
            <span class="MuiStepLabel-labelContainer MuiStepLabel-alternativeLabel css-mui-classname">
              <span class="MuiStepLabel-label Mui-completed MuiStepLabel-alternativeLabel css-mui-classname">
                STEP2
              </span>
            </span>
          </span>
        </div>
        <div class="MuiStep-root MuiStep-horizontal MuiStep-alternativeLabel Mui-completed css-mui-classname">
          <div class="MuiStepConnector-root MuiStepConnector-horizontal MuiStepConnector-alternativeLabel Mui-completed css-mui-classname">
            <span class="MuiStepConnector-line MuiStepConnector-lineHorizontal css-mui-classname">
            </span>
          </div>
          <span class="MuiStepLabel-root MuiStepLabel-horizontal MuiStepLabel-alternativeLabel css-mui-classname">
            <span class="MuiStepLabel-iconContainer Mui-completed MuiStepLabel-alternativeLabel css-mui-classname">
              <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root Mui-completed css-mui-classname"
                   focusable="false"
                   aria-hidden="true"
                   viewbox="0 0 24 24"
                   data-testid="CheckCircleIcon"
              >
                <path d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z">
                </path>
              </svg>
            </span>
            <span class="MuiStepLabel-labelContainer MuiStepLabel-alternativeLabel css-mui-classname">
              <span class="MuiStepLabel-label Mui-completed MuiStepLabel-alternativeLabel css-mui-classname">
                STEP3
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mui-classname">
      <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-mui-classname">
        All Steps are completed
      </div>
      <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-mui-classname">
        <div style="display: flex; justify-content: end;">
          <button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation css-mui-classname"
                  tabindex="0"
                  type="button"
                  data-cy="Stepper-finish"
          >
            Finish
            <span class="MuiTouchRipple-root css-mui-classname">
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navigation/Stepper Localized smoke-test 1`] = `
<div>
  <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mui-classname">
    <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-mui-classname">
      <div class="MuiStepper-root MuiStepper-horizontal MuiStepper-alternativeLabel css-mui-classname"
           data-cy="Stepper"
      >
        <div class="MuiStep-root MuiStep-horizontal MuiStep-alternativeLabel css-mui-classname">
          <span class="MuiStepLabel-root MuiStepLabel-horizontal MuiStepLabel-alternativeLabel css-mui-classname">
            <span class="MuiStepLabel-iconContainer Mui-active MuiStepLabel-alternativeLabel css-mui-classname">
              <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root Mui-active css-mui-classname"
                   focusable="false"
                   aria-hidden="true"
                   viewbox="0 0 24 24"
              >
                <circle cx="12"
                        cy="12"
                        r="12"
                >
                </circle>
                <text class="MuiStepIcon-text css-mui-classname"
                      x="12"
                      y="12"
                      text-anchor="middle"
                      dominant-baseline="central"
                >
                  1
                </text>
              </svg>
            </span>
            <span class="MuiStepLabel-labelContainer MuiStepLabel-alternativeLabel css-mui-classname">
              <span class="MuiStepLabel-label Mui-active MuiStepLabel-alternativeLabel css-mui-classname">
                locale.step1
              </span>
            </span>
          </span>
        </div>
        <div class="MuiStep-root MuiStep-horizontal MuiStep-alternativeLabel css-mui-classname">
          <div class="MuiStepConnector-root MuiStepConnector-horizontal MuiStepConnector-alternativeLabel Mui-disabled css-mui-classname">
            <span class="MuiStepConnector-line MuiStepConnector-lineHorizontal css-mui-classname">
            </span>
          </div>
          <span class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled MuiStepLabel-alternativeLabel css-mui-classname">
            <span class="MuiStepLabel-iconContainer Mui-disabled MuiStepLabel-alternativeLabel css-mui-classname">
              <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root css-mui-classname"
                   focusable="false"
                   aria-hidden="true"
                   viewbox="0 0 24 24"
              >
                <circle cx="12"
                        cy="12"
                        r="12"
                >
                </circle>
                <text class="MuiStepIcon-text css-mui-classname"
                      x="12"
                      y="12"
                      text-anchor="middle"
                      dominant-baseline="central"
                >
                  2
                </text>
              </svg>
            </span>
            <span class="MuiStepLabel-labelContainer MuiStepLabel-alternativeLabel css-mui-classname">
              <span class="MuiStepLabel-label Mui-disabled MuiStepLabel-alternativeLabel css-mui-classname">
                locale.step2
              </span>
            </span>
          </span>
        </div>
        <div class="MuiStep-root MuiStep-horizontal MuiStep-alternativeLabel css-mui-classname">
          <div class="MuiStepConnector-root MuiStepConnector-horizontal MuiStepConnector-alternativeLabel Mui-disabled css-mui-classname">
            <span class="MuiStepConnector-line MuiStepConnector-lineHorizontal css-mui-classname">
            </span>
          </div>
          <span class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled MuiStepLabel-alternativeLabel css-mui-classname">
            <span class="MuiStepLabel-iconContainer Mui-disabled MuiStepLabel-alternativeLabel css-mui-classname">
              <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root css-mui-classname"
                   focusable="false"
                   aria-hidden="true"
                   viewbox="0 0 24 24"
              >
                <circle cx="12"
                        cy="12"
                        r="12"
                >
                </circle>
                <text class="MuiStepIcon-text css-mui-classname"
                      x="12"
                      y="12"
                      text-anchor="middle"
                      dominant-baseline="central"
                >
                  3
                </text>
              </svg>
            </span>
            <span class="MuiStepLabel-labelContainer MuiStepLabel-alternativeLabel css-mui-classname">
              <span class="MuiStepLabel-label Mui-disabled MuiStepLabel-alternativeLabel css-mui-classname">
                locale.step3
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mui-classname">
      <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-mui-classname">
        CONTENT PAGE 1
      </div>
      <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-mui-classname">
        <div style="display: flex; justify-content: space-between;">
          <button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation css-mui-classname"
                  tabindex="-1"
                  type="button"
                  disabled
                  data-cy="Stepper-back"
                  style="margin-right: 1px;"
          >
            Dietro
          </button>
          <button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation css-mui-classname"
                  tabindex="0"
                  type="button"
                  data-cy="Stepper-next"
          >
            Avanti
            <span class="MuiTouchRipple-root css-mui-classname">
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navigation/Stepper Primary play-test 1`] = `
<div>
  <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mui-classname">
    <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-mui-classname">
      <div class="MuiStepper-root MuiStepper-horizontal MuiStepper-alternativeLabel css-mui-classname"
           data-cy="Stepper"
      >
        <div class="MuiStep-root MuiStep-horizontal MuiStep-alternativeLabel Mui-completed css-mui-classname">
          <span class="MuiStepLabel-root MuiStepLabel-horizontal MuiStepLabel-alternativeLabel css-mui-classname">
            <span class="MuiStepLabel-iconContainer Mui-completed MuiStepLabel-alternativeLabel css-mui-classname">
              <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root Mui-completed css-mui-classname"
                   focusable="false"
                   aria-hidden="true"
                   viewbox="0 0 24 24"
                   data-testid="CheckCircleIcon"
              >
                <path d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z">
                </path>
              </svg>
            </span>
            <span class="MuiStepLabel-labelContainer MuiStepLabel-alternativeLabel css-mui-classname">
              <span class="MuiStepLabel-label Mui-completed MuiStepLabel-alternativeLabel css-mui-classname">
                STEP1
              </span>
            </span>
          </span>
        </div>
        <div class="MuiStep-root MuiStep-horizontal MuiStep-alternativeLabel Mui-completed css-mui-classname">
          <div class="MuiStepConnector-root MuiStepConnector-horizontal MuiStepConnector-alternativeLabel Mui-completed css-mui-classname">
            <span class="MuiStepConnector-line MuiStepConnector-lineHorizontal css-mui-classname">
            </span>
          </div>
          <span class="MuiStepLabel-root MuiStepLabel-horizontal MuiStepLabel-alternativeLabel css-mui-classname">
            <span class="MuiStepLabel-iconContainer Mui-completed MuiStepLabel-alternativeLabel css-mui-classname">
              <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root Mui-completed css-mui-classname"
                   focusable="false"
                   aria-hidden="true"
                   viewbox="0 0 24 24"
                   data-testid="CheckCircleIcon"
              >
                <path d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z">
                </path>
              </svg>
            </span>
            <span class="MuiStepLabel-labelContainer MuiStepLabel-alternativeLabel css-mui-classname">
              <span class="MuiStepLabel-label Mui-completed MuiStepLabel-alternativeLabel css-mui-classname">
                STEP2
              </span>
            </span>
          </span>
        </div>
        <div class="MuiStep-root MuiStep-horizontal MuiStep-alternativeLabel Mui-completed css-mui-classname">
          <div class="MuiStepConnector-root MuiStepConnector-horizontal MuiStepConnector-alternativeLabel Mui-completed css-mui-classname">
            <span class="MuiStepConnector-line MuiStepConnector-lineHorizontal css-mui-classname">
            </span>
          </div>
          <span class="MuiStepLabel-root MuiStepLabel-horizontal MuiStepLabel-alternativeLabel css-mui-classname">
            <span class="MuiStepLabel-iconContainer Mui-completed MuiStepLabel-alternativeLabel css-mui-classname">
              <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root Mui-completed css-mui-classname"
                   focusable="false"
                   aria-hidden="true"
                   viewbox="0 0 24 24"
                   data-testid="CheckCircleIcon"
              >
                <path d="M12 0a12 12 0 1 0 0 24 12 12 0 0 0 0-24zm-2 17l-5-5 1.4-1.4 3.6 3.6 7.6-7.6L19 8l-9 9z">
                </path>
              </svg>
            </span>
            <span class="MuiStepLabel-labelContainer MuiStepLabel-alternativeLabel css-mui-classname">
              <span class="MuiStepLabel-label Mui-completed MuiStepLabel-alternativeLabel css-mui-classname">
                STEP3
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mui-classname">
      <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-mui-classname">
        All Steps are completed
      </div>
      <div class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-mui-classname">
        <div style="display: flex; justify-content: end;">
          <button class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation css-mui-classname"
                  tabindex="0"
                  type="button"
                  data-cy="Stepper-finish"
                  style
          >
            Finish
            <span class="MuiTouchRipple-root css-mui-classname">
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
